# PyTierra

./: .gitignore  MANIFEST.in  PLAN-gui-and-improvements.md  README.md  pyproject.toml
docs/: ancestor.md  architecture.md  genebank.md  gui-reference.md  instruction-set.md  parameters.md  troubleshooting.md  user-guide.md
pytierra/: __init__.py  __main__.py  cell.py  cli.py  config.py  controller.py  cpu.py  datalog.py  events.py  genebank.py  genome_io.py  instructions.py  mutations.py  paths.py  persistence.py  reaper.py  scheduler.py  simulation.py  soup.py
pytierra/data/: 0080aaa.tie  __init__.py
pytierra/gui/: __init__.py  __main__.py  app.py  genebank_window.py  help_window.py  new_soup_dialog.py  soup_view.py  status_bar.py
pytierra/gui/tabs/: __init__.py  debug_tab.py  graph_tab.py  inspect_tab.py  inventory_tab.py  mutation_tab.py  other_settings_tab.py  selection_tab.py
tests/: test_ancestor.py  test_controller.py  test_datalog.py  test_events.py  test_instructions.py  test_memory_protection.py  test_mutations.py  test_persistence.py  test_scheduler.py  test_simulation.py  test_soup.py
